--- a/manage-guest.component.css
+++ b/manage-guest.component.css
@@ -3,7 +3,7 @@ html {
   font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
-
+/*css*/
 h5 {
   font-size: 1.28571429em;
   font-weight: 700;
