--- a/view-reservations.component.html
+++ b/view-reservations.component.html
@@ -38,7 +38,7 @@
   </tr>
   </tbody>
 </table>
-
+<!--view registration  -->
 <div  class="modal fade " id="viewReservation" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
